<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation">

    <TextView
        android:id="@+id/txtReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtReservation"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFilmReserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtFilmReserve"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="165dp" />

    <Button
        android:id="@+id/btnConfirmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/vert"
        android:text="@string/txtBtnConfirmer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRetourReservation"
        app:layout_constraintEnd_toStartOf="@+id/btnAnnuler"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/rouge"
        android:text="@string/txtBtnAnnuler"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRetourReservation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmer" />

    <Button
        android:id="@+id/btnRetourReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:text="Retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>